fixed contrast

--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -5,7 +5,7 @@
 
 nav a {
     text-align: center;
-    color: rgb(107, 168, 107);
+    color: #295778;
     text-decoration: none;
 }
 
@@ -23,7 +23,7 @@ main section {
 
 #background {
     height: 725px;
-    background-color: #FF6B35;
+    background-color: #396E94;
 }
 
 body {
@@ -31,11 +31,11 @@ body {
 }
 
 header {
-    background-color: #1C6E8C;
+    background-color: #FF6B35;
 }
 
 nav a:hover {
-    background-color: #FF6B35;
+    background-color: #396E94;
     color: black;
 }
 
@@ -68,11 +68,11 @@ h4 {
 }
 
 .msg h2 {
-    color: black;
+    color: white;
 }
 
 .msg p {
-    color: black;
+    color: white;
 }
 
 footer a {
